@@ -3,7 +3,13 @@
 ACLOCAL_FLAGS = -I m4
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = c_src include src ebin
+SUBDIRS = c_src include src
+
+if ENABLE_EXAMPLES
+SUBDIRS += examples
+endif
+
+SUBDIRS += ebin
 
 if ENABLE_DOCUMENTATION
 SUBDIRS += doc
