@@ -1,0 +1,12 @@
+# $Id$
+
+EXTRA_DIST = echo_client.erl
+
+all-local:
+	@$(ERL) -noshell -pa @top_builddir@/ebin			\
+		-eval "case make:all() of				\
+		         up_to_date -> halt(0);				\
+		         Err ->						\
+		           io:format(\"~p~n\", [Err]),			\
+		           halt(1)					\
+		       end"
