@@ -37,15 +37,14 @@
 		'@srcdir@/server/exmpp_server_privacy',
 		'@srcdir@/server/exmpp_server_sasl',
 		'@srcdir@/server/exmpp_server_session',
-		'@srcdir@/server/exmpp_server_tls',
+		'@srcdir@/server/exmpp_server_tls'@COMPAT_MODULES_START@
 		@COMPAT_MODULES@'@srcdir@/compat/ejabberd_socket',
 		@COMPAT_MODULES@'@srcdir@/compat/ejabberd_zlib',
 		@COMPAT_MODULES@'@srcdir@/compat/jlib',
 		@COMPAT_MODULES@'@srcdir@/compat/stringprep',
 		@COMPAT_MODULES@'@srcdir@/compat/tls',
 		@COMPAT_MODULES@'@srcdir@/compat/xml',
-		@COMPAT_MODULES@'@srcdir@/compat/xml_stream',
-                '@srcdir@/examples/echo_client'
+		@COMPAT_MODULES@'@srcdir@/compat/xml_stream'
 	],
 	[
 		@EMKOPTS@,
